fix css leakage and up version number

--- a/src/css/caveview.scss
+++ b/src/css/caveview.scss
@@ -742,7 +742,7 @@ div.cv-frame::-webkit-scrollbar-button:end {
 	margin-left: 10px;
 }
 
-li span {
+.cv-frame li span {
 	display: inline-block;
 	width: 10px;
 	padding-right: 2px;
